# rust-grpc-proto

./: .gitignore  README.md
grpc-example/: Cargo.toml  README.md  (+2 more)
injective-example/: Cargo.toml  README.md  generate_proto.sh
injective-example/rust/proto/: mod.rs
injective-example/rust/proto/cosmos/app/v1alpha1/: cosmos.app.v1alpha1.rs
injective-example/rust/proto/exchange/: api.v1.rs  api.v1.tonic.rs  event_provider_api.rs  event_provider_api.tonic.rs  injective_accounts_rpc.rs  injective_accounts_rpc.tonic.rs  injective_archiver_rpc.rs  injective_archiver_rpc.tonic.rs  injective_auction_rpc.rs  injective_auction_rpc.tonic.rs  injective_campaign_rpc.rs  injective_campaign_rpc.tonic.rs  injective_chart_rpc.rs  injective_chart_rpc.tonic.rs  injective_derivative_exchange_rpc.rs  injective_derivative_exchange_rpc.tonic.rs  injective_exchange_rpc.rs  injective_exchange_rpc.tonic.rs  injective_explorer_rpc.rs  injective_explorer_rpc.tonic.rs  injective_insurance_rpc.rs  injective_insurance_rpc.tonic.rs  injective_meta_rpc.rs  injective_meta_rpc.tonic.rs  injective_oracle_rpc.rs  injective_oracle_rpc.tonic.rs  injective_portfolio_rpc.rs  injective_portfolio_rpc.tonic.rs  injective_spot_exchange_rpc.rs  injective_spot_exchange_rpc.tonic.rs  injective_trading_rpc.rs  injective_trading_rpc.tonic.rs  mod.rs
injective-example/rust/proto/tendermint/abci/: tendermint.abci.rs  tendermint.abci.tonic.rs
injective-example/rust/proto/tendermint/p2p/: tendermint.p2p.rs
injective-example/rust/proto/tendermint/types/: tendermint.types.rs
injective-example/src/: client.rs
(+103 files in other folders)
