[package]
name = "injective-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
prost-types = "0.12"
futures-core = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.10" 